clean up delete endpoint
